# serializer version: 1
# name: test_preprocess
  Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
# ---
# name: test_preprocess_custom
  Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
# ---
# name: test_preprocess_npy
  Data: tabular, ['N', 3, 224, 224], None, None, 1, None
# ---
# name: test_preprocess_spectral_mask_on_image_returns_warning
  Data: RGB, ['N', 3, 224, 224], 224, 224, 3, first
# ---
